--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,14 @@ main {
   width: 300px;
 }
 
+.movie-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .movie img {
-  width: 100%;
+  width: 300px;
+  max-width: 100%;
 }
 
 .movie-info {
@@ -86,7 +92,7 @@ main {
   color: rgb(189, 42, 42);
 }
 
-.overview {
+.movie-over {
   background-color: #fff;
   padding: 2rem;
   position: absolute;
@@ -95,14 +101,14 @@ main {
   left: 0;
   bottom: 0;
   right: 0;
-  transform: translateY(101%);
+  transform: translateY(100%);
   transition: transform 0.3s ease-in;
 }
 
-.overview h3 {
+/* .over h3 {
   margin-top: 0;
-}
+} */
 
-.movie:hover .overview {
-  transform: translateY(0);
+.movie:hover .movie-over {
+  transform: translateY(0%);
 }
